--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
 :root {
-  font-synthesis: none;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --animation-duration: 500ms;
+}
+
+* {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  box-sizing: border-box;
 }
 
 body {
