--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 :root {
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   --animation-duration: 500ms;
+
+  --media-tablet: '(min-width: 768px)';
+  --media-desktop: '(min-width: 1440px)';
 }
 
 * {
