feat: finished info section

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans&display=swap");
 
 :root {
 	--timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -38,6 +38,7 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	color: var(--mainText);
+	font-family: Raleway, sans-serif;
 	font-size: 18px;
 	font-weight: 400;
 	line-height: calc(27 / 18);
