--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@
 	--accentText: #c51f4b;
 	--greyText: #98a5b1;
 	--headerBackground: #0b0c0c4d;
+	--darkGrey:#1C1C21;
+	--reviewText:#F3EFF5;
 }
 
 * {
