feat: finished footer

--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,8 @@
 	--accentText: #c51f4b;
 	--greyText: #98a5b1;
 	--headerBackground: #0b0c0c4d;
-	--darkGrey:#1C1C21;
-	--reviewText:#F3EFF5;
+	--darkGrey: #1c1c21;
+	--reviewText: #f3eff5;
 }
 
 * {
