--- a/src/index.css
+++ b/src/index.css
@@ -1,57 +1,74 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Open+Sans&family=PT+Sans&family=Raleway:wght@400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Open+Sans&family=PT+Sans&family=Raleway:wght@400;600;700&display=swap");
 
 :root {
-  --Montserrat: 'Montserrat', sans-serif;
-  --OpenSans: 'Open Sans', sans-serif;
-  --PTSans: 'PT Sans', sans-serif;
-  --Raleway: 'Raleway', sans-serif;
+	--Montserrat: "Montserrat", sans-serif;
+	--OpenSans: "Open Sans", sans-serif;
+	--PTSans: "PT Sans", sans-serif;
+	--Raleway: "Raleway", sans-serif;
 
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  --animation-duration: 500ms;
+	--timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	--animation-duration: 500ms;
 
-  --darkBackground: #0b0c0c;
-  --mainText: #333333;
-  --lightText: #fefefe;
-  --lightBackground: #f1f2f4;
-  --accentLink: #e8d5b5;
-  --accentText: #c51f4b;
-  --greyText: #98a5b1;
-  --headerBackground: #0b0c0c4d;
-  --darkGrey: #1c1c21;
-  --reviewText: #f3eff5;
-  --btnBgHover: #ffffff;
-  --btnBgPressed: #e1e1e1;
+	--darkBackground: #0b0c0c;
+	--mainText: #333333;
+	--lightText: #fefefe;
+	--lightBackground: #f1f2f4;
+	--accentLink: #e8d5b5;
+	--accentText: #c51f4b;
+	--greyText: #98a5b1;
+	--headerBackground: #0b0c0c4d;
+	--darkGrey: #1c1c21;
+	--reviewText: #f3eff5;
+	--btnBgHover: #ffffff;
+	--btnBgPressed: #e1e1e1;
 }
 
 * {
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-  box-sizing: border-box;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
+	box-sizing: border-box;
 }
 
 *::before,
 *::after {
-  box-sizing: inherit;
-  margin: 0;
-  padding: 0;
+	box-sizing: inherit;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  color: var(--mainText);
-  background-color: var(--lightBackground);
-  font-family: Raleway, sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: calc(27 / 18);
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	color: var(--mainText);
+	background-color: var(--lightBackground);
+	font-family: Raleway, sans-serif;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: calc(27 / 18);
 }
 
 main {
-  position: relative;
+	position: relative;
+	top: -52px;
+
+	@media screen and (min-width: 768px) {
+		top: -80px;
+	}
+
+	@media screen and (min-width: 1024px) {
+		top: -100px;
+	}
+
+	@media screen and (min-width: 1200px) {
+		top: -120px;
+	}
+
+	@media screen and (min-width: 1440px) {
+		top: -140px;
+	}
 }
 
 h1,
@@ -62,46 +79,35 @@ h5,
 p,
 a,
 button {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 ol,
 ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
 button {
-  padding: 0;
-  font: inherit;
-  color: inherit;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
+	padding: 0;
+	font: inherit;
+	color: inherit;
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
 }
 
 img,
 picture,
 svg {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-@media screen and (min-width: 1024px) {
-  main {
-    top: -120px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  main {
-    top: -140px;
-  }
+	display: block;
+	max-width: 100%;
+	height: auto;
 }
