--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 	--lightBackground: #f1f2f4;
 	--accentLink: #e8d5b5;
 	--accentText: #c51f4b;
+	--trueText: #57C1A6;
 	--greyText: #98a5b1;
 	--headerBackground: #0b0c0c4d;
 	--darkGrey: #1c1c21;
