--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 	--lightBackground: #f1f2f4;
 	--accentLink: #e8d5b5;
 	--accentText: #c51f4b;
-	--trueText: #57C1A6;
+	--trueText: #57c1a6;
 	--greyText: #98a5b1;
 	--headerBackground: #0b0c0c4d;
 	--darkGrey: #1c1c21;
@@ -53,6 +53,7 @@ body {
 
 main {
 	position: relative;
+	top: -52px;
 
 	@media screen and (min-width: 768px) {
 		top: -68px;
@@ -64,10 +65,6 @@ main {
 	@media screen and (min-width: 1200px) {
 		top: -80px;
 	}
-	@media screen and (min-width: 1201px) {
-		top: -88px;
-	}
-
 	@media screen and (min-width: 1440px) {
 		top: -88px;
 	}
@@ -107,7 +104,7 @@ button {
 }
 
 img,
-picture{
+picture {
 	display: block;
 	max-width: 100%;
 	height: auto;
